<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">语音识别</string>

    <string name="defaulttitle">语音识别</string>


    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="please_speak">请说话</string>
    <string name="speaking">请说话</string>
    <string name="starting">启动中……</string>
    <string name="start">启动完成</string>
    <string name="start_dialog">按下说话</string>
    <string name="status">状态：</string>
    <string name="tofinish">说完</string>
    <string name="in_recog">正在识别</string>
    <string name="finished">完成:</string>
    <string name="error_occur">出错: 0x%1$s</string>
    <string name="error_start">启动失败: 0x%1$s</string>
    <string name="is_canceled">已取消</string>
    <string name="try_again">重试</string>
    <string name="volume">音量</string>
    <string name="start_tune">开始音</string>
    <string name="end_tune">结束音</string>
    <string name="setting">设置</string>
    <string name="choose_prop_type">请选择垂直领域类型：</string>
    <string name="choose_language">请选择识别语言：</string>
    <string name="choose_dialog_theme">请选择识别对话框样式：</string>
    <string name="play_start_sound">播放开始音</string>
    <string name="play_end_sound">播放结束音</string>
    <string name="dialog_tips_sound">对话框提示音</string>
    <string name="show_vol">显示识别音量</string>
    <string name="use_default_audio_source">使用麦克风输入</string>
    <string name="nlp">启用语义解析</string>
    <string name="more">更多示例</string>
    <string name="view_html">请重试</string>
    <string name="activity_label_dialog_tips">识别对话框提示语</string>
    <string name="activity_label_api">Api方式识别</string>
    <string name="activity_desc_api">开发者可以自定义识别的UI</string>
    <string name="activity_label_external">外部音频识别</string>
    <string name="activity_desc_external">不使用麦克风录音，使用外部音频识别。只支持PCM16位单声道音频。采样率16K或者8K</string>
    <string name="activity_label_nlu">语义理解示例</string>
    <string name="activity_desc_nlu">将语音转换为意图</string>
    <string name="dialog_show_tips_onstart">启动时显示提示列表</string>
    <string name="dialog_show_tips_onstart_summary">语音识别对话框展示后，不启动识别，首先展示提示列表，需要用户手工点击开始按钮</string>
    <string name="dialog_show_tip_onsilent">静音时显示一条提示</string>
    <string name="dialog_show_tip_onsilent_summary">识别启动后，如果3秒没有检测到语音起点，在声音动效下方显示一条提示语</string>
    <string name="dialog_show_help_onsilent">静音异常时显示帮助按钮</string>
    <string name="dialog_show_help_onsilent_summary">由于没有检测到用户语音，超时异常后将取消按钮替换为帮助按钮</string>
    <string-array name="prop_tpye">
        <item>输入</item>
        <item>热词</item>
        <item>地图</item>
        <item>音乐</item>
        <item>视频</item>
        <item>应用</item>
        <item>网页</item>
        <item>健康</item>
        <item>购物</item>
        <item>打电话</item>
    </string-array>
    <string-array name="languages">
        <item>普通话(中国)</item>
        <item>粤语(中国)</item>
        <item>英语(美国)</item>
    </string-array>
    <string-array name="dialog_theme">
        <item>暗蓝</item>
        <item>亮蓝</item>
        <item>暗绿</item>
        <item>亮绿</item>
        <item>暗橙</item>
        <item>亮橙</item>
        <item>暗红</item>
        <item>亮红</item>
    </string-array>
    <string-array name="command_tips">
        <item>北京天气怎么样</item>
        <item>打电话给移动客服</item>
        <item>北京到上海的飞机票</item>
        <item>讲个笑话</item>
        <item>百度大厦怎么走</item>
    </string-array>

</resources>