<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/status_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/item"
        android:visibility="invisible">

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/show"
            android:textSize="25dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/statusBodyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/statusTextView"
            android:layout_toRightOf="@+id/statusTextView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <TextView
            android:id="@+id/volumeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/statusTextView"
            android:layout_below="@+id/statusTextView"
            android:text="@string/volume"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/volumeProgressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/volumeTextView"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_toRightOf="@+id/volumeTextView"
            android:max="100"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@drawable/button" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/cancel"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>